--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "cube-ui": "~1.12.15",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
